final commit: working code with new features